--- a/Analisis de Homicidios en Colombia.Rmd
+++ b/Analisis de Homicidios en Colombia.Rmd
@@ -1,8 +1,12 @@
 ---
-title: " **Análisis de Series de Tiempo de Homicidios en colombia** "
-author: " *Andrés Barrios | Jesus Gallardo | Luis Tafur* "
-date: " *`r Sys.Date()`*"
-output: html_document
+title: ' **Análisis de Series de Tiempo de Homicidios en colombia** '
+author: ' *Andrés Barrios | Jesus Gallardo | Luis Tafur* '
+date: ' *`r Sys.Date()`*'
+output:
+  html_document: default
+  pdf_document: default
+documentClass: book
+site: bookdown::bookdown_site
 ---
 
 ```{r setup, include=FALSE}
