--- a/index.Rmd
+++ b/index.Rmd
@@ -4,6 +4,7 @@ author: ' *Andrés Barrios | Jesus Gallardo | Luis Tafur* '
 date: ' *`r Sys.Date()`*'
 site: bookdown::bookdown_site
 documentclass: book
+output_dir: "docs"
 
 ---
 
