--- a/index.Rmd
+++ b/index.Rmd
@@ -101,6 +101,8 @@ Se realiza la verificacion de valores nulos o vacios obteniendo los siguientes r
 par(mfrow=c(3,1))
 md.pattern(data, rotate.names=TRUE)
 ```
+![](docs\_main_files\figure-html\unnamed-chunk-6-1.png")
+
 
 Clara mente se observa que no existen valores nulos o vacios en ninguna de las variables.
 
@@ -177,6 +179,9 @@ Se realiza la evaluacion de la serie agrupada por meses para determinar patrones
 boxplot(df_ts ~ cycle(df_ts), xlab = "Meses", ylab = "Homicidios",
         main = "Boxplot de los homicidios por meses")
 ```
+![](_main_files\figure-html\unnamed-chunk-10-1.png")
+
+
 
 Luego de analizar los resultados se evidencia que en el mes de abril hay mayor numero de homicidios, adicionalmente se evidencia que la media de los meses se encuentra entre los 400 y 500 homicidios.
 
@@ -189,6 +194,9 @@ En 7 meses se observan unos valores atipicos que superan los 1000 homicidios y u
 lag.plot(df_ts, 12, do.lines = F,main = "Grafica de Rezagos")
 
 ```
+![](_main_files\figure-html\unnamed-chunk-11-1.png")
+
+
 
 Para el caso de la grafica de rezagos se puede afirmar que existe estacionalidad en la serie de tiempo, debido a que se reflejan patrones identificables en los datos.
 
@@ -219,6 +227,9 @@ theme(legend.position = "top") +
                      labels = c("EMA" = "Media Movil Exponencial", "SMA" = "Media Movil Simple"))+
   scale_x_date(date_breaks = "1 year", date_labels = "%Y")
 ```
+![](_main_files\figure-html\unnamed-chunk-13-1.png")
+
+
 Durante los últimos 13 años, los homicidios en Colombia han experimentado un aumento gradual.
 Las medias móviles de 12 meses muestran que en 2010 había entre 230 y 240 asesinatos, comparados con 1000 a 850 asesinatos en los últimos meses de 2023 y enero de 2024, quintuplicando así las cifras de este fenómeno en el país. 
 Se observa una tendencia a la baja al finalizar el primer semestre de cada año, seguido por un aumento durante los últimos meses, adicionalmente, se identifican dos períodos de fluctuaciones significativas: 
@@ -244,6 +255,9 @@ ggplot(Data_ts, aes(x = fechas, y = homicidios))+
                      labels = c("EMA" = "Media Movil Exponencial", "SMA" = "Media Movil Simple"))+
   scale_x_date(date_breaks = "1 year", date_labels = "%Y")
 ```
+![](_main_files\figure-html\unnamed-chunk-14-1.png")
+
+
 En congruencia con las medias móviles, se observa que la cantidad de homicidios no supera los 375 casos mensuales mensuales antes del 2020, sin embargo en el los periodos posteriores como en el 2023 se observa que se alcanzan valores tope hasta de 1000 muertes mesuales en el país a causa de los homicidios.
 
 ### - **Componentes de las Series Temporales**
@@ -262,6 +276,9 @@ autoplot(fit_df, color = "aquamarine3") +
   )
 
 ```
+![](_main_files\figure-html\unnamed-chunk-15-1.png")
+
+
 En el grafico se identifica: \n
 
 1- El comportamiento de la serie \n
@@ -294,6 +311,9 @@ ggseasonplot(Data_ts$homicidios)+
   theme_minimal()+
   labs(x = "Mes", title = "Estacionalidad de los homicidios por mes")
 ```
+![](_main_files\figure-html\unnamed-chunk-17-1.png")
+
+
 
 Se evidencian picos en la mayoría de los años principalmente en los meses de febrero, abril, junio y octubre, a excepción de 2023 donde se observa un comportamiento atipico en **Enero** mas alto de lo usual y entre **Mayo y Octubre** estos valores vuelven a incrementar de forma significativa y con una tendencia incremental en ese periodo.
 
@@ -336,6 +356,10 @@ plot(Serie_Log$homicidios, xlab= "Anios", ylab= "Homicidios", main= "Serie Despu
 
 
 ```
+![](_main_files\figure-html\unnamed-chunk-19-1.png")
+![](_main_files\figure-html\unnamed-chunk-19-2.png")
+
+
 
 Luego de aplicar la transformacion logaritmica a la serie de tiempo, se observa como se minimizan las diferencias en la serie, presentandonos una grafica con valores mas estables, esto nos ayuda a cumplir con el supuesto de que la serie tenga una variabilidad constante.
 
@@ -351,6 +375,9 @@ a_estacio = diff(x$homicidios)
 plot(a_estacio, xlab = "Anios", ylab = " ",
      main = "TS estacionariedad en los homicidios de Colombia \n2010 - 2024")
 ```
+![](_main_files\figure-html\unnamed-chunk-20-1.png")
+
+
 
 Tal y como se observa en la grafica, la diferenciacion nos ha permitido tener una serie mucho mas estable eliminando las variaciones extremas para tener datos mas uniformes. \n
 
@@ -364,6 +391,9 @@ Como parte de la exploracion de la serie transformada se realiza la verificacion
 library(forecast)
 acf(a_estacio, main = "Autocorrelacion")
 ```
+![](_main_files\figure-html\unnamed-chunk-21-1.png")
+
+
 
 El realizar la autocorrelacion nos permite identificar un comportamiento estacionario con respecto al los resagos de tiempo en la serie.
 
@@ -374,6 +404,9 @@ al igual que el analisis de autocorrelacion **ACF** el analisis de autocorrelaci
 ```{r echo=FALSE,message=FALSE,warning=FALSE, fig.align='center'}
 pacf(a_estacio, main = "Autocorrelacion parcial")
 ```
+![](_main_files\figure-html\unnamed-chunk-22-1.png")
+
+
 
 Al identificar la estructura autorregresiva en la serie, se tiene que, se necesitan 3 rezagos para predecir el valor actual de la serie.
 
@@ -413,6 +446,9 @@ plot(Modelo, main = "Predicciones con modelo Holt-Winters", ylab = "Cantidad de 
 legend("bottomright", legend = c("Data", "Prediction"), col = c("black", "red"), lty = 1)
 
 ```
+![](_main_files\figure-html\unnamed-chunk-23-1.png")
+
+
 
 La gráfica nos brinda una visualización del comportamiento de las predicciones generadas por el modelo multiplicativo Holt-Winters. En un primer vistazo, podemos observar un ajuste cercano entre las predicciones y los datos base. Además, se aprecia una tendencia y estacionalidad similar entre ambas.
 
@@ -444,6 +480,9 @@ Modelo2 <- HoltWinters(Data_ts$homicidios, seasonal = "multiplicative", alpha = 
 plot(Modelo2, main = "Predicciones con modelo Holt-Winters (Uso de parametros: Nivel)")
 legend("bottomright", legend = c("Data", "Prediction"), col = c("black", "red"), lty = 1)
 ```
+![](_main_files\figure-html\unnamed-chunk-25-1.png")
+
+
 
 Al modificar dando más peso al parámetro **Gamma** correspondiente al Nivel, se puede apreciar como las estimaciones cambian en magnitud y los picos y valles no coinciden en igual proporción como en el modelo original.
 
@@ -454,6 +493,9 @@ plot(Modelo3, main = "Predicciones con modelo Holt-Winters \n (Uso de parametros
 legend("topleft", legend = c("Data", "Prediction"), col = c("black", "red"), lty = 1)
 
 ```
+![](_main_files\figure-html\unnamed-chunk-26-1.png")
+
+
 
 Al modificar dando más peso al parámetro **Beta** correspondiente a la Estacionalidad, se puede apreciar como las estimaciones del 2024 es muy diferente a los modelos anteriores, lo cual se explica al considerar lo ocurrido en el año 2023 como consecuencia de factores externos que sólo afectan en ese periodo de tiempo.
 
@@ -464,12 +506,19 @@ plot(Modelo4, main = "Predicciones con modelo Holt-Winters (Uso de parametros: E
 legend("topleft", legend = c("Data", "Prediction"), col = c("black", "red"), lty = 1)
 
 ```
+![](_main_files\figure-html\unnamed-chunk-27-1.png")
+
+
 
 ```{r echo=FALSE,message=FALSE,warning=FALSE, fig.align='center'}
 plot(fitted(Modelo), main = "Holt-winters Ajuste", xlab = "", ylab = "")
 
 plot(fitted(Modelo4), main = "Holt-winters Ajuste", xlab = "", ylab = "")
 ```
+![](_main_files\figure-html\unnamed-chunk-28-1.png")
+![](_main_files\figure-html\unnamed-chunk-28-2.png")
+
+
 
 El ajuste del modelo muestra una tendencia constante, un nivel que se aproxima a los datos observados y una estacionalidad periódica entre los años.
 
@@ -480,6 +529,9 @@ prediction <- predict(Modelo, 11, prediction.interval = TRUE, level = 0.95)
 plot(forecast(Modelo, h = 11, level = c(80,95)), main = "Predicciones en Colombia bajo el modelo Holt-Winters")
 
 ```
+![](_main_files\figure-html\unnamed-chunk-29-1.png")
+
+
 
 En los valores predichos bajo el modelo **Holt-winters**, se implementó la predicción de 11 meses posteriores a enero 2024 con intervalos de confianza del **80** y **95%**, observando unas barreras correspondientes a **1200** maximo y menos de **200** homicidios sin 0, por observación, el número estaría entre **180** a **150 homicidios**.
 
@@ -490,6 +542,8 @@ Modelo_evaluation <- forecast(Modelo, h = 11, level=c(80,95))
 
 acf(Modelo_evaluation$residuals, lag.max=30, na.action=na.pass)
 ```
+![](_main_files\figure-html\unnamed-chunk-30-1.png")
+
 
 Realizando una autocorrelación a través de la función 'acf', se establecen unos rezagos de 30, haciendo alusión a la misma obsevación en el mes anterior, y dejando denotado no tener en cuenta los NA's en la operación.
      
@@ -510,6 +564,9 @@ Dado que **p-value** es mayor a **0.05** se acepta la hipotesis nula advertida e
 hist(Modelo_evaluation$residuals, main = "Residuos del modelo Holt-Winters")
 
 ```
+![](_main_files\figure-html\unnamed-chunk-32-1.png")
+
+
 
 Así las cosas, graficando los residuos del modelo, se tiene que gran parte de las observaciones se encuentran alrededor de **0**, lo que sugiere que el modelo no tiene un sesgo sistemático en sus predicciones; captura bien la estacionalidad y la tendencia de los datos; y explica en mayor parte la variabilidad de los datos.
 
@@ -550,6 +607,9 @@ predicciones <- forecast(m_arima, h = 11)
 # Visualizar las predicciones
 plot(predicciones, main = "Predicciones con el modelo ARIMA")
 ```
+![](_main_files\figure-html\unnamed-chunk-35-1.png")
+
+
 
 ```{r echo=FALSE, message=FALSE, warning=FALSE, fig.align='center'}
 residuales<-m_arima$residuals
@@ -558,6 +618,9 @@ qqline(residuales)
 shapiro.test(residuales)
 
 ```
+![](_main_files\figure-html\unnamed-chunk-36-1.png")
+
+
 
 Se puede observar que que hay residuos extremos tanto en la parte inferior como superior de la linea de ajuste. Adicionalmente en el test de Shapiro el valor **W: 0,856**, establece que los datos se alejan de un comportamiento normal, en lina con este resultado el **p-value: 1.487e-11** indica que existe suficiente evidencia estadistica para rechazar la hipotesis nula **Ho:Los datos provienen de una distribucion normal**.
 
@@ -619,6 +682,8 @@ forecast_prophet <- predict(modelo_prophet, futuro_prophet)
 # Visualizar los resultados
 plot(modelo_prophet, forecast_prophet)
 ```
+![](_main_files\figure-html\unnamed-chunk-42-1.png")
+
 
 - Los puntos negros representan medidas reales de la serie de tiempo \n
 - La linea azul el pronóstico de Prophet el cual muestra un ajuste significativo a los datos reales \n
@@ -636,6 +701,9 @@ prophet_plot_components(modelo_prophet, forecast_prophet)
 
 
 ```
+![](_main_files\figure-html\unnamed-chunk-43-1.png")
+
+
 
 La grafica de residuales de la prediccion muestran, que a finales de septiembre los homicidios en el país tienden a la baja; adicionalmente, los meses de julio y enero son donde este indicador sufre un incremento significativo en comparacion con el resto de los meses.
       
@@ -672,6 +740,9 @@ nuevoMod_holt_winters <- HoltWinters(nueva_ts, seasonal = "additive")
 plot(nuevoMod_holt_winters, main = "Nuevo modelo Holt-Winters")
 
 ```
+![](_main_files\figure-html\unnamed-chunk-45-1.png")
+
+
 
 ```{r echo=FALSE,warning=FALSE, message=FALSE}
 # Identificación de estacionariedad, prueba dicker - fuller para la nueva serie de tiempo
@@ -972,6 +1043,8 @@ Se usa  función plotIterativeError para ver evolución del error de la red a lo
 plotIterativeError(model)
 
 ```
+![](_main_files\figure-html\unnamed-chunk-60-1.png")
+
 
 En el grafico se puede observar como el error no converge a cero rápidamente lo que es una indicacion de que el ajuste del modelo es debil.
 
@@ -1023,7 +1096,7 @@ modelJordan <- jordan(train_inputs, train_outputs, size = 12, learnFuncParams = 
 plotIterativeError(modelJordan)
 
 ```
-
+![](_main_files\figure-html\unnamed-chunk-64-1.png")
 
 
 ```{r}
