--- a/index.Rmd
+++ b/index.Rmd
@@ -101,7 +101,7 @@ Se realiza la verificacion de valores nulos o vacios obteniendo los siguientes r
 par(mfrow=c(3,1))
 md.pattern(data, rotate.names=TRUE)
 ```
-![](docs\_main_files\figure-html\unnamed-chunk-6-1.png")
+![](_main_files\figure-html\unnamed-chunk-6-1.png")
 
 
 Clara mente se observa que no existen valores nulos o vacios en ninguna de las variables.
