--- a/index.Rmd
+++ b/index.Rmd
@@ -101,8 +101,9 @@ Se realiza la verificacion de valores nulos o vacios obteniendo los siguientes r
 par(mfrow=c(3,1))
 md.pattern(data, rotate.names=TRUE)
 
+knitr::include_graphics("unnamed-chunk-6-1.png")
 ```
-
+![]("unnamed-chunk-6-1.png")
 
 Clara mente se observa que no existen valores nulos o vacios en ninguna de las variables.
 
